fixed issue on mobile landing page where only one link worked

--- a/fakeSite/src/landingPage.css
+++ b/fakeSite/src/landingPage.css
@@ -101,25 +101,14 @@
 @media only screen and (max-width: 600px) {
   .landing-page-container {
     background-size: 200%;
-    background-repeat: no-repeat;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-items: center;
+
     margin-top: 50px;
     width: 100%;
     height: 100vh;
     margin: 0 auto;
     margin-top: 70px;
   }
-  .categories-container {
-    position: relative;
-    text-align: center;
-    color: white;
-  }
-  .landing-page-background-image {
-    width: 100%;
-  }
+
   .top-left,
   .top-right,
   .mid-left,
@@ -128,7 +117,7 @@
     font-size: 36px;
     font-style: italic;
     color: black;
-    border: 1px solid black;
+    border: 2px solid black;
     width: 150px;
     height: 130px;
     text-align: center;
@@ -159,6 +148,34 @@
   }
 
   .mid-right {
+    background-color: rgba(32, 169, 233, 0.7);
+    position: absolute;
+    top: 210px;
+    left: 10px;
+  }
+
+  .top-left:hover {
+    background-color: rgba(251, 142, 0, 0.7);
+    position: absolute;
+    top: 50px;
+    left: -163px;
+  }
+
+  .top-right:hover {
+    background-color: rgba(89, 207, 42, 0.7);
+    position: absolute;
+    top: 50px;
+    left: 10px;
+  }
+
+  .mid-left:hover {
+    background-color: rgba(230, 50, 134, 0.7);
+    position: absolute;
+    top: 210px;
+    left: -163px;
+  }
+
+  .mid-right:hover {
     background-color: rgba(32, 169, 233, 0.7);
     position: absolute;
     top: 210px;
